GLMediaPlayer: Use URI instead of URL / Misc refinements
- GLMediaPlayer: Use URI instead of URL, allowing passing a non resolved location
  - Java's URL doesn't allow 'other' protocols, i.e. RTSP

- GLMediaPlayer: Add Table of test streams and their location ..

- FFMPEGMediaPlayer
  - Handle av_read_play/pause response on java side, ignore error - simply dump in DEBUG_NATIVE mode